<resources>
    <string name="app_name">Road Surface Topography</string>
    <string name="authAppTitleText">Road Surface Topology</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_new_account">Create new account</string>
    <string name="create_account">Create account</string>
    <string name="log_in_instead">Log in instead</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="botNavBarHomeTitle">Home</string>
    <string name="botNavBarListTitle">Data list</string>
    <string name="botNavBarMapTitle">Map</string>
    <string name="botNavBarProfileTitle">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
