<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="50dp"
    >
    <ImageView
        android:id="@+id/authImg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="@dimen/authImgWidth"
        android:layout_height="@dimen/authImgHeight"
        android:layout_margin="@dimen/authImgMarginTop"
        android:src="@drawable/ic_user_24dp"
        />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/authImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/regEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textSize="@dimen/authAppTitle"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:shadowColor="@color/colorAccent"
        android:text="@string/authAppTitleText"
        />

    <EditText
        android:id="@+id/regEmail"
        app:layout_constraintTop_toBottomOf="@id/authImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/authEmailMarginTop"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/regUsername"
        app:layout_constraintTop_toBottomOf="@+id/regEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/regPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/authPasswordMarginTop"
        android:hint="@string/username"
        />
    <EditText
        android:id="@+id/regPassword"
        app:layout_constraintTop_toBottomOf="@+id/regUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/authPasswordMarginTop"
        android:hint="@string/password"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/registerButton"
        app:layout_constraintTop_toBottomOf="@+id/regPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/buttonMarginTop"
        android:textSize="@dimen/buttonTextSize"
        android:text="@string/create_account"
        />
    <TextView
        android:id="@+id/loginInsteadText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/log_in_instead"
        android:layout_marginTop="@dimen/newAccMarginTop"
        />

    <ProgressBar
        android:id="@+id/registerProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginInsteadText"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>