<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="50dp">

    <ImageView
        android:id="@+id/authImg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="@dimen/authImgWidth"
        android:layout_height="@dimen/authImgHeight"
        android:layout_margin="@dimen/authImgMarginTop"
        android:src="@drawable/ic_user_24dp"
        />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/authImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/authEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textSize="@dimen/authAppTitle"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:shadowColor="@color/colorAccent"
        android:text="@string/authAppTitleText"
        />

    <EditText
        android:id="@+id/authEmail"
        app:layout_constraintTop_toBottomOf="@id/authImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/authEmailMarginTop"
        android:hint="Email"
        />
    <EditText
        android:id="@+id/authPassword"
        app:layout_constraintTop_toBottomOf="@+id/authEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/authPasswordMarginTop"
        android:hint="@string/password"
        />
    <Button
        android:id="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/authPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/sign_in"
        />
    <TextView
        android:id="@+id/createNewAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorPrimary"
        android:text="@string/create_new_account"
        android:layout_marginTop="@dimen/newAccMarginTop"
        />

    <ProgressBar
        android:id="@+id/loginProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createNewAccountText"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
